2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 1Ah subpage 01h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SPC-5.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SPC-3.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Ah subpage 01h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Prevent decoding subpages on subpage 00h decoders.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 1Ah.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 1Ch.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SFF-8020i.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 2Ah.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 06h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode pages 01h and 07h for multimedia
	  devices.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implement decoding mode page 0Dh.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Modify mode page 01h decoding for CD-ROM returned mode page
	  size.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Eh.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 10h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 07h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 04h.
