@@ -1,3 +1,9 @@
+2015-10-31  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
+	  Implemented decoding mode page 10h for direct-access
+	  devices.
+
 2015-10-30  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
